--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="container">
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a href="#" treebook
 	<%= yield %>
 	</div>
 </body>
