--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a href="#" treebook
+				<a href="#" class="brand"> treebook </a>
+					<ul> class="nav">
+						<li><%= link_to "All Statuses", statuses_path%></li>
+					</div>
+				</div>
+			</div>
+			
 	<%= yield %>
 	</div>
 </body>
